with minor changes

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<button class="btn btn-default chat_btn"><i class="fas fa-comments"></i> Chat</button>
 		</div>
 		
-		<div id="chatWindow">			
+		<div class="col-md-4" id="chatWindow">			
 			<div id="chatWindowHeader" class="sub_container">
 			  <div class="row">
 					<div class="col-md-6" align="left">
@@ -97,13 +97,13 @@
 					</div>
 				</div>			   				
 				<p class="chat_window_desc" align="left" >
-					<i>Hello. You can chat with my bot to get  to know me. You can ask questions on my professional experience. You may even request for physical copy of my resume to me sent to your email address. Please type help if you need any help with the questions you want to ask!</i>
+					<i>Hello. Welcome to Resume-Bot!</i>
 				</p>
 				<div id="conversation"></div>
 				<form id="chatform" style="margin-top: 10px" onsubmit="return pushChat();">
 					<input type="text" id="chatInput" class="form-control" placeholder="Type here...">
 					<div align="left">
-							<button class="btn btn-secondary btn-md push_chat">Submit</button>
+							<button class="btn btn-primary btn-md push_chat">Submit</button>
 					</div>					
 				</form>
 			</div>
