--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>  
 	<div class="jumbotron">
 		<div class="display-4" align="center">Resume Bot Demo!</div>
+		<!-- Dummy Text to fill the page -->
 		<hr>
 		<div class="row">
 			<div class="col-md-6">		
@@ -79,7 +80,7 @@
 				</div>
 			</div>
 	</div>
-
+ <!-- Container for chat window  -->
   <div class="container">
 	<div class="row">		
 		<div class="chat_btn_div">
@@ -110,8 +111,9 @@
 		</div>			
 	</div>		
   </div>	
-  
+  <!-- Script file for communicating with AWS Lex -->
   <script type="text/javascript" src="chatbot.js"></script>
+  <!-- Script file to make the chat window draggable -->
   <script type="text/javascript" src="draggable.js"></script>
 </body>
 
